--- a/index.html
+++ b/index.html
@@ -1,52 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
 <script id="_wau1ca">var _wau = _wau || []; _wau.push(["dynamic", "stronger100", "1ca", "ffffffffffff", "small"]);</script><script async src="//waust.at/d.js"></script>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="robots" content="noindex, nofollow">
-<title>Mi GALERI1A AQUI</title>
-<meta content='https://i.postimg.cc/g0nwm7qL/475582776-632807172765472-5491941500500453179-n.jpg' property='og:image'/>
+<title>Incontri discreti</title>
+<meta content='https://i.postimg.cc/SQVxd77J/Vista-Uno-Sepia.png' property='og:image'/>
 <script src="https://cdn.smrt-content.com/assets/1004/js/jquery.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/device.min.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/custom.js"></script>
 <script src="https://cdn.smrt-content.com/assets/1004/js/backoffer.js"></script>
 <link rel="stylesheet" href="https://cdn.smrt-content.com/assets/1004/css/index.css">
 <link rel="shortcut icon" href="https://cdn.jmpcdn.com/assets/3420/images/2.ico" type="image/x-icon">
-<title>Photo Gallery</title>
+<title>GALLERIA FOTOGRAFICA</title>
 <div class="layer">
 </div>
 <div class="wrap">
 <div class="step-block">
 <div class="logo">
+<img src="" alt="">
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-Soy masajista profesional voy a tu domicilio por horas  ¿Quieres ver mi catalogo?.?.</div>
+Arriveremo da te di notte, il servizio è disponibile in tutta la città. Vuoi vedere il mio catalogo?</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
 No
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
-Si
+Sì
 </div>
 </div>
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-¡Felicidades! Has sido seleccionado para conocer a una chica, para completar una cita debes registrarte en nuestra web, pulsar "ENTRAR", rellena el formulario gratuito y disfruta del sexo vaginal, orgías y mucho más... </div>
+ATTENZIONE! Accetti di rispettare le donne che vedrai dopo? Se conosci qualcuno, non dirlo e non diffondere voci.... </div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://singleswantdates.com/tds/ae?tdsId=s6982pos_r&tds_campaign=s6982pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d8a90aeb&subid={Stronger}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">ENTER
+<a href="https://go-2-date.us/tds/ae?tdsId=s3419pos_r&tds_campaign=s3419pos&s1=ps&utm_source=int&utm_sub=opnfnl&affid=d1e5281c&subid={Strongeer}&subid2={subid2}&clickid={clickid}" class="step-btn submit-btn tr-submit-button showmail">SONO D'ACCORDO
 </a>
 </div>
 </div>
 <video autoplay muted loop id="VideoBg">
-<source src="https://cdn-dimi.akamaized.net/landings/284460/1700583168/images/4.mp4" type="video/mp4">
+<source src="https://cdn77-vid-mp4.xvideos-cdn.com/NrI-9u_A9xGDFVqrq1cCLw==,1737966589/videos/mp4/7/2/5/xvideos.com_725b860aa69386510f8343555c9a0e59.mp4?ui=MTg2Ljg5LjI1MC40Ny05MjkzNTc0MTktL3ZpZGVvLm90aXZmaW05MmRlL2xhX3ZhcXVlcmFf" type="video/mp4">
 </video>
 <script type="text/javascript">
       /*<![CDATA[*/    (function(w){
